--- a/.github/workflows/post-commit-pipeline.yml
+++ b/.github/workflows/post-commit-pipeline.yml
@@ -27,9 +27,11 @@ jobs:
 
       - name: Install Poetry
         run: |
-          curl -sSL https://install.python-poetry.org | python -
-          export PATH="$HOME/.local/bin:$PATH"
-          poetry --version
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
+      - name: Install dependencies
+        run: poetry install --no-interaction --no-root
 
       - name: Get merged pull request
         id: get_merged_pr
@@ -83,16 +85,13 @@ jobs:
           NEW_VERSION="$major.$minor.$patch"
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Install dependencies and run tests
-        run: |
-          export PATH="$HOME/.local/bin:$PATH"
-          poetry install --no-root
-          poetry run pytest
+      - name: Run tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}/packages
+        run: poetry run pytest
 
-      - name: Run linter check with Black
-        run: |
-          export PATH="$HOME/.local/bin:$PATH"
-          poetry run black --check .
+      - name: Check formatting
+        run: poetry run black . --check
 
       - name: Build & push docker image
         if: steps.version_increment.outputs.bump != 'none'
