--- a/.github/workflows/pull-request-pipeline.yml
+++ b/.github/workflows/pull-request-pipeline.yml
@@ -6,24 +6,30 @@ on:
       - main
 
 jobs:
-  build-and-test-pipeline:
+  build_test:
     runs-on: ubuntu-22.04
 
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v2
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          distribution: 'temurin'
-          java-version: 21
+          python-version: '3.11'
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Build & Test
-        run: ./gradlew clean build
+      - name: Install dependencies
+        run: poetry install --no-interaction --no-root
 
-      - name: Run Linter Check
-        run: ./gradlew spotlessCheck
+      - name: Run tests
+        env:
+          PYTHONPATH: ${{ github.workspace }}/packages
+        run: poetry run pytest
+
+      - name: Check formatting
+        run: poetry run black . --check
