--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
-numpy = "^2.0.0"
+numpy = ">=1.24,<2.0"
 pandas = "^2.0.3"
 requests = "^2.26.0"
 scikit-learn = "^1.2.2"
@@ -28,6 +28,8 @@ pydantic = "^1.10.7"
 toml = "^0.10.2"
 httpx = "^0.24.0"
 anyio = ">=3.4.0,<5"
+newspaper4k = "^0.9.3.1"
+lxml = { version = "^4.9.3", extras = ["html_clean"] }
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
