--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^2.0.3"
 requests = "^2.26.0"
 scikit-learn = "^1.2.2"
 joblib = "^1.1.0"
+lightgbm     = "^4.3.0"
+optuna       = "^3.6.0"
 fastapi = "^0.95.0"
 uvicorn = { extras = ["standard"], version = "^0.18.0" }
 yfinance = "^0.2.18"
