--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ selenium = "^4.10.0"
 beautifulsoup4 = "^4.12.2"
 transformers = "^4.30.0"
 spacy = "^3.8.4"
+en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl"}
 torch = "^2.6.0"
 pydantic = "^1.10.7"
 toml = "^0.10.2"
