--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ pandas = "^2.0.3"
 requests = "^2.26.0"
 scikit-learn = "^1.2.2"
 joblib = "^1.1.0"
+lightgbm     = "^4.3.0"
+optuna       = "^3.6.0"
 fastapi = "^0.95.0"
 uvicorn = { extras = ["standard"], version = "^0.18.0" }
 yfinance = "^0.2.18"
@@ -23,6 +25,7 @@ selenium = "^4.10.0"
 beautifulsoup4 = "^4.12.2"
 transformers = "^4.30.0"
 spacy = "^3.8.4"
+en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl"}
 torch = "^2.6.0"
 pydantic = "^1.10.7"
 toml = "^0.10.2"
