--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ httpx = "^0.24.0"
 anyio = ">=3.4.0,<5"
 newspaper4k = "^0.9.3.1"
 lxml = { version = "^4.9.3", extras = ["html_clean"] }
+pymongo                    = "^4.6.1"
+google-cloud-pubsub        = "^2.19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.0"
