--- a/.github/workflows/post-commit-pipeline.yml
+++ b/.github/workflows/post-commit-pipeline.yml
@@ -88,6 +88,7 @@ jobs:
       - name: Run tests
         env:
           PYTHONPATH: ${{ github.workspace }}/packages
+          ENVIRONMENT: testing
         run: poetry run pytest
 
       - name: Check formatting
