--- a/.github/workflows/pull-request-pipeline.yml
+++ b/.github/workflows/pull-request-pipeline.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run tests
         env:
           PYTHONPATH: ${{ github.workspace }}/packages
+          ENVIRONMENT: testing
         run: poetry run pytest
 
       - name: Check formatting
