--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,50 +1,65 @@
 [tool.poetry]
-name = "my-stock-project"
-version = "0.1.0"
+name        = "my-stock-project"
+version     = "0.1.0"
 description = "A monorepo for stock data/model pipelines and an API server."
 
 packages = [
-    { include = "stock_model", from = "packages" },
-    { include = "stock_api", from = "packages" }
+  { include = "stock_model", from = "packages" },
+  { include = "stock_api",   from = "packages" },
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
-numpy = ">=1.24,<2.0"
-pandas = "^2.0.3"
-requests = "^2.26.0"
-scikit-learn = "^1.2.2"
-joblib = "^1.1.0"
-lightgbm     = "^4.3.0"
-optuna       = "^3.6.0"
-fastapi = "^0.95.0"
-uvicorn = { extras = ["standard"], version = "^0.18.0" }
-yfinance = "^0.2.18"
-textblob = "^0.17.1"
-selenium = "^4.10.0"
-beautifulsoup4 = "^4.12.2"
-transformers = "^4.30.0"
-spacy = "^3.8.4"
-en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl"}
-torch = "^2.6.0"
-pydantic = "^1.10.7"
-toml = "^0.10.2"
-httpx = "^0.24.0"
-anyio = ">=3.4.0,<5"
-newspaper4k = "^0.9.3.1"
-lxml = { version = "^4.9.3", extras = ["html_clean"] }
-pymongo                    = "^4.6.1"
-google-cloud-pubsub        = "^2.19.1"
+python                    = ">=3.9,<3.13"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.0.0"
-black = "^24.3.0"
+# API server
+fastapi                   = "^0.95.0"
+uvicorn                   = { extras = ["standard"], version = "^0.18.0" }
+
+# Data fetchers & HTTP
+yfinance                  = "^0.2.18"
+requests                  = "^2.26.0"
+httpx                     = "^0.24.0"
+anyio                     = ">=3.4.0,<5"
+
+# Config & validation
+pydantic                  = "^1.10.7"
+toml                      = "^0.10.2"
+
+# Persistence & messaging
+pymongo                   = "^4.6.1"
+google-cloud-pubsub       = "^2.19.1"
+
+# NLP & scraping
+textblob                  = "^0.17.1"
+newspaper4k               = "^0.9.3.1"
+beautifulsoup4            = "^4.12.2"
+lxml                      = { version = "^4.9.3", extras = ["html_clean"] }
+spacy                     = "^3.8.4"
+transformers              = "^4.30.0"
+en-core-web-md            = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
+
+# Model
+numpy                     = ">=1.24,<2.0"
+pandas                    = "^2.0.3"
+joblib                    = "^1.1.0"
+
+[tool.poetry.group.dev.dependencies]
+# Testing & linting
+pytest                    = "^7.0.0"
+black                     = "^24.3.0"
+mypy                      = "^1.5.1"
+
+# Data science / model training (only for local dev)
+scikit-learn              = "^1.2.2"
+lightgbm                  = "^4.3.0"
+optuna                    = "^3.6.0"
+torch                     = "^2.6.0"
 
 [tool.black]
-line-length = 88
-target-version = ['py311']
-include = '\.pyi?$'
-exclude = '''
+line-length   = 88
+target-version = ["py311"]
+include       = "\\.pyi?$"
+exclude       = '''
 /(
     \.git
   | \.venv
@@ -55,5 +70,5 @@ exclude = '''
 '''
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "setuptools>=42", "wheel"]
+requires      = ["poetry-core>=1.0.0", "setuptools>=42", "wheel"]
 build-backend = "poetry.core.masonry.api"
