--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ spacy                     = "^3.8.4"
 transformers              = "^4.30.0"
 en-core-web-md            = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
 
-# Model
+# Model / ML
 numpy                     = ">=1.24,<2.0"
 pandas                    = "^2.0.3"
 joblib                    = "^1.1.0"
@@ -46,20 +46,18 @@ lightgbm                  = "^4.3.0"
 scikit-learn              = "^1.2.2"
 torch                     = "^2.6.0"
 
+
 [tool.poetry.group.dev.dependencies]
-# Testing & linting
 pytest                    = "^7.0.0"
 black                     = "^24.3.0"
 mypy                      = "^1.5.1"
-
-# Data science / model training (only for local dev)
 optuna                    = "^3.6.0"
 
 [tool.black]
-line-length   = 88
+line-length    = 88
 target-version = ["py311"]
-include       = "\\.pyi?$"
-exclude       = '''
+include        = "\\.pyi?$"
+exclude        = '''
 /(
     \.git
   | \.venv
