--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ lightgbm                  = "^4.3.0"
 scikit-learn              = "^1.2.2"
 torch                     = "^2.6.0"
 
+# Schedulers
+apscheduler  = "^3.10"
+
 
 [tool.poetry.group.dev.dependencies]
 pytest                    = "^7.0.0"
