--- a/.github/workflows/post-commit-pipeline.yml
+++ b/.github/workflows/post-commit-pipeline.yml
@@ -100,7 +100,7 @@ jobs:
           sudo docker image prune --all --force || true
           df -h
 
-      - name: Build & push docker image
+      - name: Build & push docker image for market-feeling
         if: steps.version_increment.outputs.bump != 'none'
         env:
           DOCKER_IMAGE_VERSION: "${{ steps.calculate_version.outputs.NEW_VERSION }}"
@@ -112,6 +112,20 @@ jobs:
             -t $DOCKER_USERNAME/autoinvestor-market-feeling:${DOCKER_IMAGE_VERSION} \
             .
           docker push $DOCKER_USERNAME/autoinvestor-market-feeling:${DOCKER_IMAGE_VERSION}
+
+      - name: Build & push docker image for news scheduler
+        if: steps.version_increment.outputs.bump != 'none'
+        env:
+          DOCKER_IMAGE_VERSION: "${{ steps.calculate_version.outputs.NEW_VERSION }}"
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: |
+         echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
+         docker build \
+           -f scheduler/Dockerfile \
+           -t $DOCKER_USERNAME/autoinvestor-news-pinger:${DOCKER_IMAGE_VERSION} \
+           scheduler
+         docker push $DOCKER_USERNAME/autoinvestor-news-pinger:${DOCKER_IMAGE_VERSION}
 
       - name: Create GitHub Release
         if: steps.version_increment.outputs.bump != 'none'
@@ -133,3 +147,24 @@ jobs:
       image: autoinvestor-market-feeling
       version: ${{ needs.build_test_release.outputs.new-version }}
     secrets: inherit
+
+  update-cd-repo-main:
+    name: GitOps - main image tag
+    uses: AutoInvestor/infra-gitops/.github/workflows/update-version.yml@main
+    needs: build_test_release
+    if: needs.build_test_release.outputs.bump != 'none'
+    with:
+      image: autoinvestor-market-feeling
+      version: ${{ needs.build_test_release.outputs.new-version }}
+    secrets: inherit
+
+  update-cd-repo-scheduler:
+    name: GitOps - scheduler image tag
+    uses: AutoInvestor/infra-gitops/.github/workflows/update-version.yml@main
+    needs: build_test_release
+    if: needs.build_test_release.outputs.bump != 'none'
+    with:
+      image: autoinvestor-news-pinger
+      version: ${{ needs.build_test_release.outputs.new-version }}
+    secrets: inherit
+
