--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ fastapi                   = "^0.95.0"
 uvicorn                   = { extras = ["standard"], version = "^0.18.0" }
 
 # Data fetchers & HTTP
-yfinance                  = "^0.2.18"
+yfinance                  = "^0.2.59"
 requests                  = "^2.26.0"
 httpx                     = "^0.24.0"
 anyio                     = ">=3.4.0,<5"
@@ -48,6 +48,9 @@ torch                     = "^2.6.0"
 
 # Schedulers
 apscheduler  = "^3.10"
+tenacity = "^9.1.2"
+requests-cache = "^1.2.1"
+curl-cffi = "^0.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
