Update this micro to only calculate the feeling

--- a/config.toml
+++ b/config.toml
@@ -10,4 +10,5 @@ environment   = "production"
 mongodb_db    = "market_feeling"
 gcp_project   = "autoinvestor-tfm"
 pubsub_topic  = "market-feeling-events"
-pubsub_subscription  = "market-feeling-to-core"
+pubsub_subscription_core  = "market-feeling-to-core"
+pubsub_subscription_news_scraper  = "market-feeling-to-news-scraper"
